--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'BCCResqueBundle::layout.html.twig' %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="/bundles/bccresque/css/bootstrap.min.css"/>
