implement scheduled job dashboard

--- a/Resources/views/Default/queue_list.html.twig
+++ b/Resources/views/Default/queue_list.html.twig
@@ -10,6 +10,7 @@
             <ul class="nav">
                 <li><a href="{{ path('BCCResqueBundle_homepage') }}">Home</a></li>
                 <li class="active"><a href="#">Queues</a></li>
+                <li><a href="{{ path('BCCResqueBundle_scheduled_list') }}">Scheduled</a></li>
             </ul>
         </div>
     </div>
