--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -10,6 +10,7 @@
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="{{ path('BCCResqueBundle_queue_list') }}">Queues</a></li>
+                <li><a href="{{ path('BCCResqueBundle_scheduled_list') }}">Scheduled</a></li>
             </ul>
         </div>
     </div>
@@ -46,6 +47,23 @@
     </div>
     <div class="row">
         <a class="span1 offset9" href="{{ path('BCCResqueBundle_queue_list') }}">more...</a>
+    </div>
+
+    <h2>Scheduled Jobs</h2>
+    <div class="row">
+        <div class="span">
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th class="span5">First Scheduled Job Timestamp</th>
+                    <td>{{ resque.firstDelayedJobTimestamp[0]|date('Y-m-d H:i:s') }}</td>
+                </tr>
+                <tr>
+                    <th class="span5">Number of Scheduled Jobs</th>
+                    <td><a href="{{ path('BCCResqueBundle_scheduled_list') }}">{{ resque.numberOfDelayedJobs }}</a></td>
+                </tr>
+            </table>
+        </div>
+        <a class="span1 offset9" href="{{ path('BCCResqueBundle_scheduled_list') }}">more...</a>
     </div>
 
     <div class="row">
