--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}BCC Resque{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="/bundles/bccresque/css/bootstrap.min.css"/>
+            <link rel="stylesheet" href="{{ asset('bundles/bccresque/css/bootstrap.min.css') }}" type="text/css" media="screen" />
             <style type="text/css">
                 body {
                     padding-top: 60px;
