--- a/Resources/views/Default/queue_list.html.twig
+++ b/Resources/views/Default/queue_list.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="/bundles/bccresque/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{{ asset('bundles/bccresque/css/bootstrap.min.css') }}" type="text/css" media="screen" />
     <style type="text/css">
         body {
             padding-top: 40px;
