--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,157 +1,128 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
-
 {% block body %}
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="#">
-                BCC Resque
-            </a>
-            <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="{{ path('BCCResqueBundle_queue_list') }}">Queues</a></li>
-                <li><a href="{{ path('BCCResqueBundle_scheduled_list') }}">Scheduled</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
+{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'homepage'} %}
 <div class="container">
-
-    <div class="row">
-        <h2 class="span">
-            Queues
-        </h2>
-    </div>
-    <div class="row">
-        <div class="span">
-            <table class="table table-striped table-bordered">
-                <thead>
+    <div class="row span5">
+        <h2>Queues</h2>
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th class="span3">Name</th>
+                <th class="span2">Jobs</th>
+            </tr>
+            </thead>
+            {% for queue in resque.queues %}
                 <tr>
-                    <th class="span5">
-                        Name
-                    </th>
-                    <th class="span5">
-                        Jobs
-                    </th>
+                    <td>{{ queue.name }}</td>
+                    <td><a href="{{ path('BCCResqueBundle_queue_show', { queue: queue.name }) }}">{{ queue.size }}</a></td>
                 </tr>
-                </thead>
-                {% for queue in resque.queues %}
-                    <tr>
-                        <td>{{ queue.name }}</td>
-                        <td>{{ queue.size }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
-    </div>
-    <div class="row">
-        <a class="span1 offset9" href="{{ path('BCCResqueBundle_queue_list') }}">more...</a>
-    </div>
+            {% endfor %}
+        </table>
 
-    <h2>Scheduled Jobs</h2>
-    <div class="row">
-        <div class="span">
-            <table class="table table-striped table-bordered">
+        <h2>Failed Jobs</h2>
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th class="span3">Number of Failed Jobs</th>
+                <td class="span2"><a href="{{ path('BCCResqueBundle_failed_list') }}">{{ resque.failedJobs|length }}</a></td>
+            </tr>
+        </table>
+
+        <h2>Scheduled Jobs</h2>
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th class="span3">First Scheduled Job Timestamp</th>
+                <td class="span2">{{ resque.firstDelayedJobTimestamp[0]|date('Y-m-d H:i:s') }}</td>
+            </tr>
+            <tr>
+                <th>Number of Scheduled Jobs</th>
+                <td><a href="{{ path('BCCResqueBundle_scheduled_list') }}">{{ resque.numberOfDelayedJobs }}</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="row span12">
+        <h2>Workers</h2>
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th class="span3">
+                    Where
+                </th>
+                <th class="span3">
+                    Queues
+                </th>
+                <th class="span4">
+                    Processing
+                </th>
+                <th class="span1">
+                    Processed
+                </th>
+                <th class="span1">
+                    Failed
+                </th>
+            </tr>
+            </thead>
+
+            {% for worker in resque.workers %}
                 <tr>
-                    <th class="span5">First Scheduled Job Timestamp</th>
-                    <td>{{ resque.firstDelayedJobTimestamp[0]|date('Y-m-d H:i:s') }}</td>
+                    <td>{{ worker.id }}</td>
+                    <td>
+                        {% for queue in worker.queues %}
+                            <span class="label label-info">{{ queue.name }}</span>
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% set job = worker.currentJob %}
+                        {% if job %}
+                            <div>
+                                <strong>{{ job.name }}</strong>
+                            </div>
+                            <div class="row">
+                                <span class="pull-right">{{ worker.currentJobStart|date }}</span>
+                            </div>
+                            <div>
+                                <span>
+                                    <ul class="unstyled">
+                                        {% for argname, argvalue in job.args %}
+                                            <li>
+                                                <span>{{ argname }}</span>
+                                                <em class="pull-right">{{ argvalue }}</em>
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </span>
+                            </div>
+                        {% else %}
+                            <em>idle</em>
+                        {% endif %}
+                    </td>
+                    <td>{{ worker.processedCount }}</td>
+                    <td>{{ worker.failedCount }}</td>
                 </tr>
+            {% else %}
                 <tr>
-                    <th class="span5">Number of Scheduled Jobs</th>
-                    <td><a href="{{ path('BCCResqueBundle_scheduled_list') }}">{{ resque.numberOfDelayedJobs }}</a></td>
+                    <td colspan="5">
+                        <em>empty...</em>
+                    </td>
                 </tr>
-            </table>
-        </div>
-        <a class="span1 offset9" href="{{ path('BCCResqueBundle_scheduled_list') }}">more...</a>
+            {% endfor %}
+        </table>
     </div>
-
-    <div class="row">
-        <h2 class="span">Workers</h2>
+    <div class="row span5">
+        <h2>Redis</h2>
+        <table class="table table-bordered table-striped">
+            <tr>
+                <th class="span3">Host</th>
+                <td class="span2">{{ resque.redisConfiguration.host }}</td>
+            </tr>
+            <tr>
+                <th>Port</th>
+                <td>{{ resque.redisConfiguration.port }}</td>
+            </tr>
+            <tr>
+                <th>Database</th>
+                <td>{{ resque.redisConfiguration.database }}</td>
+            </tr>
+        </table>
     </div>
-    <div class="row">
-        <div class="span">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th class="span3">
-                            Where
-                        </th>
-                        <th class="span3">
-                            Queues
-                        </th>
-                        <th class="span4">
-                            Processing
-                        </th>
-                        <th class="span1">
-                            Processed
-                        </th>
-                        <th class="span1">
-                            Failed
-                        </th>
-                    </tr>
-                </thead>
-
-                {% for worker in resque.workers %}
-                    <tr>
-                        <td>{{ worker.id }}</td>
-                        <td>
-                            {% for queue in worker.queues %}
-                                <span class="label label-info">{{ queue.name }}</span>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            {% set job = worker.currentJob %}
-                            {% if job %}
-                                <div>
-                                    <strong>{{ job.name }}</strong>
-                                </div>
-                                <div class="row">
-                                    <span class="pull-right">{{ worker.currentJobStart|date }}</span>
-                                </div>
-                                <div>
-                                    <span>
-                                        <ul class="unstyled">
-                                            {% for argname, argvalue in job.args %}
-                                                <li>
-                                                    <span>{{ argname }}</span>
-                                                    <em class="pull-right">{{ argvalue }}</em>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </span>
-                                </div>
-                            {% else %}
-                                <em>idle</em>
-                            {% endif %}
-                        </td>
-                        <td>{{ worker.processedCount }}</td>
-                        <td>{{ worker.failedCount }}</td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="5">
-                            <em>empty...</em>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
-    </div>
-
-    <div class="row">
-        <h2 class="span">Redis</h2>
-    </div>
-
-    <div class="row">
-        <strong class="span2">Host</strong><span class="span3">{{ resque.redisConfiguration.host }}</span>
-    </div>
-    <div class="row">
-        <strong class="span2">Port</strong><span class="span3">{{ resque.redisConfiguration.port }}</span>
-    </div>
-    <div class="row">
-        <strong class="span2">Database</strong><span class="span3">{{ resque.redisConfiguration.database }}</span>
-    </div>
-
 </div>
 {% endblock %}
