--- a/Resources/views/Default/queue_show.html.twig
+++ b/Resources/views/Default/queue_show.html.twig
@@ -3,21 +3,27 @@
 {% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'none'} %}
 <div class="container">
     <div class="row span12">
-        <h2>Jobs Scheduled for {{ timestamp|date('Y-m-d H:i:s') }}</h2>
-        <p><a href="{{ path('BCCResqueBundle_scheduled_list') }}">Back to all Scheduled Jobs</a></p>
+        <h3>Queue "{{ queue.name }}"</h3>
+        {% include "BCCResqueBundle:default:_miniPager.html.twig" %}
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
-                <th>Job</th>
-                <th>Details</th>
+                <th>#</th>
+                <th>Name</th>
+                <th>Args</th>
             </tr>
             </thead>
             <tbody>
             {% for job in jobs %}
                 <tr>
-                    <th class="span1">{{ loop.index }}</th>
-                    <td class="span11">
-                        <pre>{{ job }}</pre>
+                    <td class="span1">{{ loop.index }}</td>
+                    <td class="span4">{{ job.name }}</td>
+                    <td class="span7">{{ job.args | json_encode }}</td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3">
+                        <em>empty...</em>
                     </td>
                 </tr>
             {% endfor %}
