--- a/Resources/views/Default/scheduled_list.html.twig
+++ b/Resources/views/Default/scheduled_list.html.twig
@@ -1,45 +1,28 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
-
 {% block body %}
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="brand" href="{{ path('BCCResqueBundle_homepage') }}">
-                    BCC Resque
-                </a>
-                <ul class="nav">
-                    <li><a href="{{ path('BCCResqueBundle_homepage') }}">Home</a></li>
-                    <li><a href="{{ path('BCCResqueBundle_queue_list') }}">Queues</a></li>
-                    <li class="active"><a href="{{ path('BCCResqueBundle_scheduled_list') }}">Scheduled</a></li>
-                </ul>
-            </div>
-        </div>
+{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'scheduled_list'} %}
+<div class="container">
+    <div class="row span3">
+        <h2>Scheduled Jobs</h2>
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th>Date</th>
+                <th>Count</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for timestamp in timestamps %}
+                <tr>
+                    <th class="span2">
+                        <a href="{{ path('BCCResqueBundle_scheduled_timestamp', {timestamp: timestamp[0]}) }}">
+                            {{ timestamp[0]|date('Y-m-d H:i:s') }}</a>
+                    </th>
+                    <td class="span1">{{ timestamp[1] }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="span">
-                <h2>Scheduled Jobs</h2>
-                <table class="table table-striped table-bordered">
-                    <thead>
-                    <tr>
-                        <th class="span3">Date</th>
-                        <th>Count</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for timestamp in timestamps %}
-                        <tr>
-                            <th>
-                                <a href="{{ path('BCCResqueBundle_scheduled_timestamp', {timestamp: timestamp[0]}) }}">
-                                    {{ timestamp[0]|date('Y-m-d H:i:s') }}</a>
-                            </th>
-                            <td>{{ timestamp[1] }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+</div>
 {% endblock %}
