--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
 {% block body %}
-{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'homepage'} %}
+{% include "BCCResqueBundle:Default:_menu.html.twig" with {activeNav: 'homepage'} %}
 <div class="container">
     <div class="row span5">
         <h2>Queues</h2>
