--- a/Resources/views/Default/scheduled_list.html.twig
+++ b/Resources/views/Default/scheduled_list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
 {% block body %}
-{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'scheduled_list'} %}
+{% include "BCCResqueBundle:Default:_menu.html.twig" with {activeNav: 'scheduled_list'} %}
 <div class="container">
     <div class="row span3">
         <h2>Scheduled Jobs</h2>
