--- a/Resources/views/Default/scheduled_timestamp.html.twig
+++ b/Resources/views/Default/scheduled_timestamp.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
 {% block body %}
-{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'none'} %}
+{% include "BCCResqueBundle:Default:_menu.html.twig" with {activeNav: 'none'} %}
 <div class="container">
     <div class="row span12">
         <h2>Jobs Scheduled for {{ timestamp|date('Y-m-d H:i:s') }}</h2>
