--- a/Resources/views/Default/queue_show.html.twig
+++ b/Resources/views/Default/queue_show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'BCCResqueBundle::layout.html.twig' %}
 {% block body %}
-{% include "BCCResqueBundle:default:_menu.html.twig" with {activeNav: 'none'} %}
+{% include "BCCResqueBundle:Default:_menu.html.twig" with {activeNav: 'none'} %}
 <div class="container">
     <div class="row span12">
         <h3>Queue "{{ queue.name }}"</h3>
-        {% include "BCCResqueBundle:default:_miniPager.html.twig" %}
+        {% include "BCCResqueBundle:Default:_miniPager.html.twig" %}
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
