Fix for array to string conversion Twig exception
This fixes the problem discussed in #83 where a Twig runtime exception is thrown when one of the job arguments is an array (which is always the case with jobs which support a retry strategy). 

More here: https://github.com/michelsalib/BCCResqueBundle/issues/83

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -85,7 +85,7 @@
                                         {% for argname, argvalue in job.args %}
                                             <li>
                                                 <span>{{ argname }}</span>
-                                                <em class="pull-right">{{ argvalue }}</em>
+                                                <em class="pull-right">{{ dump(argvalue) }}</em>
                                             </li>
                                         {% endfor %}
                                     </ul>
