--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -85,7 +85,7 @@
                                         {% for argname, argvalue in job.args %}
                                             <li>
                                                 <span>{{ argname }}</span>
-                                                <em class="pull-right">{{ dump(argvalue) }}</em>
+                                                <em class="pull-right">{{ argvalue | json_encode(constant('JSON_PRETTY_PRINT')) }}</em>
                                             </li>
                                         {% endfor %}
                                     </ul>
